--- a/src/assets/sass/now-ui-kit/_cards.scss
+++ b/src/assets/sass/now-ui-kit/_cards.scss
@@ -77,8 +77,8 @@
     }
 
     .footer{
-        margin-bottom: 10px;
-        margin-top: 24px;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
     }
 }
 
