--- a/src/assets/sass/now-ui-kit/_footers.scss
+++ b/src/assets/sass/now-ui-kit/_footers.scss
@@ -1,44 +1,7 @@
-.footer{
-    padding: 24px 0;
+.footer {
+  padding: 1rem 1rem;
 
-    &.footer-default{
-        background-color: #f2f2f2;
-    }
-
-    nav{
-        display: inline-block;
-        float: left;
-    }
-
-    ul{
-        margin-bottom: 0;
-        padding: 0;
-        list-style: none;
-
-        li{
-            display: inline-block;
-
-            a{
-                color: inherit;
-                padding: $padding-base-vertical;
-                font-size: $font-size-small;
-                text-transform: uppercase;
-                text-decoration: none;
-
-                &:hover{
-                    text-decoration: none;
-                }
-            }
-        }
-    }
-
-    .copyright{
-        font-size: $font-size-small;
-    }
-
-    &:after{
-        display: table;
-        clear: both;
-        content: " ";
-    }
+  &.footer-default {
+    background-color: #f2f2f2;
+  }
 }
